Bug 1227544 - Scaling on 720p devices is broken. r=timdream Fix the scaling logic for 280-300dpi devices Some xhdpi devices have real densities as low as 287dpi but these devices are far too small to have an hdpi UI.

Signed-off-by: Adam Farden <adam@farden.cz>